--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
+        <q>Best practices for advanced software development</q>
     </div>
 
     <!--
