--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@
         
     -->
     <div class="step slide" data-x="0" data-y="-1500">
-        <q>Don't you think that presentations given <strong>in modern browsers</strong> shouldn't <strong>copy the limits</strong> of 'classic' slide decks?</q>
+        <ol>
+            <li>Clean Code and Pragmmatic Programmer
+            <li>SOLID principles
+            <li>Design Patterns
+            <li>Antipatterns
+            <li>Why testing is important?
+        </ol>
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
